plugins {
    id 'java-library'
}
apply plugin: 'kotlin'
apply plugin: 'com.diffplug.spotless'

configurations.implementation {
    exclude group: "org.jetbrains", module: "annotations"
}

dependencies {
    implementation 'com.github.marschall:zipfilesystem-standalone:1.0.1'
    implementation 'androidx.annotation:annotation:1.8.2'
    implementation project(path: ':jaxp')

    runtimeOnly ('org.jetbrains.kotlin:kotlin-reflect:2.0.20')

    api 'org.jetbrains.trove4j:trove4j:20160824'
    api files('libs/kotlin-compiler-embeddable-1.6.0.jar')
	//api 'org.jetbrains.kotlin:kotlin-compiler-embeddable:2.0.0'
	api files('libs/javax.jar')
    compileOnly files('libs/the-unsafe.jar')
    compileOnly project(path: ':android-stubs')

}

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
    kotlinOptions {
        jvmTarget = '17'
    }
}


spotless {
		java {
			target "**/*.java"
			googleJavaFormat()
			}
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
        "--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
        "--add-exports=jdk.compiler/sun.nio.ch=ALL-UNNAMED"
    ]
}
